- Water-glassed eggs can be cracked now - DONE!!!
- More Animals compatibility updated, while we're doing all this egg stuff - DONE!!!
- Fruit bread/muffins nerfed; accept a max of 2 fruits instead of 5 (and gelatin) - DONE!!!
- New 1.20 clays integrated (thanks pizza2004!)
- Rolling pin tool rack transform fixed; now actually in the rack (thanks pizza2004!)
- Chef hat + saddle makes Chef Saddle
- Recipes using bottles require opened bottles now - DONE!!!
- Yogurt can be added to fruit bars in place of gelatin
- cookware trader spawns near initial spawn location

NEW FOOD:
- added meatloaf?
- added walnut/sunflower butter?
- Dehydrated yeast added (cook in cooking pot; grind result)

MISC: 
- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
- Food can be put on the ground, I guess?

1.7.5
NEW FOOD ADDITIONS FINALLY???

- Acorns 1.20+ compatiblity added - DONE!!!

- Wildcraft stuff:
-- Wildcraft fruits updated
-- Wildcraft nut butter added (like peanut butter, but with other nuts)
On hiatus until Wildcraft Herbs & Spices is updated
-- added herbs to Dressing
-- mixed herbs added
-- herbal soft dough added
-- pomace wine no longer crashes

BALANCING: 
- Salads and cold pasta allow cured sausage - DONE!!!
- Potent spirits do not cure into themselves anymore - DONE!!!
- Alcohol nutrition nerfed when in meals - DONE!!!
- Lard nutrition & healing nerfed; output doubled - DONE!!!

BUG FIXES:
- Wildcraft strong wine barrels into vinegar at the proper rate - DONE!!!
- Acorn muffins don't crash when topping with honey - DONE!!!




1.7.4
- Wildcraft stuff:
-- Nuts working in fruit bread
-- Nuts working in muffins
-- Nuts working in trail mix
-- Nuts can be put into yogurt meals
-- Sumac and Juniper berries are NUTS now, I guess
-- Wildcraft Aged liquids disabled when Expanded Foods is installed 
-- Aged flower wine incorporated into EF
-- Pickled veggie barrel recipes aligned (now requires 1.5 L of vinegar instead of 0.1 L)