@@ -2,6 +2,20 @@
   {
     "file": "game:blocktypes/clay/fired/pot",
     "op": "addmerge",
+    "path": "/attributesByType/claypot-blue-cooked/textureMapping/bushmeat-raw",
+    "side": "server",
+    "value": [ "meat", "group8" ]
+  },
+  {
+    "file": "game:blocktypes/clay/fired/pot",
+    "op": "addmerge",
+    "path": "/attributesByType/claypot-blue-cooked/textureMapping/bushmeat-cured",
+    "side": "server",
+    "value": [ "meat", "group8" ]
+  },
+  {
+    "file": "game:blocktypes/clay/fired/pot",
+    "op": "addmerge",
     "path": "/attributesByType/claypot-blue-cooked/textureMapping/meatnugget-redmeat-raw",
     "side": "server",
     "value": [ "meat", "group6" ]
