@@ -85,10 +85,13 @@ CHECK https://github.com/AreYSerious/VintageTranslation FOR TRANSLATIONS....
 - Fruit bread/muffins nerfed; accept a max of 2 fruits instead of 5 (and gelatin) - DONE!!!
 - New 1.20 clays integrated (thanks pizza2004!)
 - Rolling pin tool rack transform fixed; now actually in the rack (thanks pizza2004!)
-- Chef hat + saddle makes Chef Saddle
 - Recipes using bottles require opened bottles now - DONE!!!
 - Yogurt can be added to fruit bars in place of gelatin
-- cookware trader spawns near initial spawn location
+- Pemmican can be placed in stacks
+- Soybean textures/shapes updated
+- Do stuff with bamboo shoots? idk
+- Muffins and fruit bread have default visuals in the handbook
+- Bushmeat meals have proper textures - DONE!!!
 
 NEW FOOD:
 - added meatloaf?
